fix: 修复长时间运行稳定性问题
- AuditJob 日志从 CopyOnWriteArrayList 改为 ArrayDeque 环形缓冲区，
  消除 remove(0) 的 O(n) 数组拷贝性能问题
- DangerousSinkClassifier 修复运算符优先级 bug，openConnection 不再
  无条件匹配为 OUTBOUND_HTTP
- EvidencePreparationServiceImpl 白盒分析信号量加超时，避免无限等待
- AuditJobStore 新增已完成任务自动淘汰，防止内存泄漏